--- a/home/home.html
+++ b/home/home.html
@@ -13,14 +13,27 @@
 
     <div class="app-title">Diagrams</div>
 
-    <div class="diagrams-container">diagrams-container
-        <!-- <div class="diagram dgm-1">diagram-1</div>
+    <div class="diagrams-container">
+        <div class="diagram dgm-1">diagram-1</div>
         <div class="diagram dgm-2">diagram-2</div>
         <div class="diagram dgm-3">diagram-3</div>
-        <div class="diagram dgm-3">diagram-3</div> -->
+        <div class="diagram dgm-4">diagram-4</div>
+
+        <div class="diagram dgm-1">diagram-1</div>
+        <div class="diagram dgm-2">diagram-2</div>
+        <div class="diagram dgm-3">diagram-3</div>
+        <div class="diagram dgm-4">diagram-4</div>
+
+        <div class="diagram dgm-1">diagram-1</div>
+        <div class="diagram dgm-2">diagram-2</div>
+        <div class="diagram dgm-3">diagram-3</div>
+        <div class="diagram dgm-4">diagram-4</div>
+            
     </div>
 
-    <div class="draw-container">draw-container</div>
+    <div class="draw-container">
+        <div class="paper">paper</div>
+    </div>
 
     <!-- <div class="app-container">
         
