--- a/home/home.html
+++ b/home/home.html
@@ -14,21 +14,12 @@
     <div class="app-title">Diagrams</div>
 
     <div class="diagrams-container">
-        <div class="diagram dgm-1">diagram-1</div>
-        <div class="diagram dgm-2">diagram-2</div>
-        <div class="diagram dgm-3">diagram-3</div>
-        <div class="diagram dgm-4">diagram-4</div>
-
-        <div class="diagram dgm-1">diagram-1</div>
-        <div class="diagram dgm-2">diagram-2</div>
-        <div class="diagram dgm-3">diagram-3</div>
-        <div class="diagram dgm-4">diagram-4</div>
-
-        <div class="diagram dgm-1">diagram-1</div>
-        <div class="diagram dgm-2">diagram-2</div>
-        <div class="diagram dgm-3">diagram-3</div>
-        <div class="diagram dgm-4">diagram-4</div>
-            
+         <ul class="list">
+             <li class="diagram">a</li>
+             <li class="diagram">b</li>
+             <li class="diagram">c</li>
+             <li class="diagram">d</li>
+         </ul>  
     </div>
 
     <div class="draw-container">
