--- a/home/home.html
+++ b/home/home.html
@@ -19,6 +19,16 @@
              <li class="diagram">b</li>
              <li class="diagram">c</li>
              <li class="diagram">d</li>
+             
+             <li class="diagram">a</li>
+             <li class="diagram">b</li>
+             <li class="diagram">c</li>
+             <li class="diagram">d</li>
+
+             <li class="diagram">a</li>
+             <li class="diagram">b</li>
+             <li class="diagram">c</li>
+             <li class="diagram">d</li>
          </ul>  
     </div>
 
